# weresocool_cli

./: .gitignore  Cargo.toml  Makefile  README.md  song.socool  song.socool.csv  song.socool.json
renders/: song.socool.csv  song.socool.json
src/: app.rs  main.rs  play.rs  print.rs  test.rs  watch.rs
src/test_data/: play.socool
test_data/: play.socool
