[package]
name = "weresocool"
version = "0.1.0"
authors = ["Danny Meyer <danny@xasopheno.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "1.0.3"
clap = "2.33.3"
notify = "4.0.15"
predicates = "1.0.7"
weresocool = { path = "../weresocool" }
weresocool_instrument = { path = "../weresocool/instrument" }
weresocool_error = { path = "../weresocool/error" }
thiserror = "1.0.24"
portaudio = "0.7.0"
hound = "3.4.0"
